@@ -1,26 +1,33 @@
 package domain;
 
-import common.Constants;
+import domain.constant.BlackJackRule;
+import domain.vo.Card;
+import domain.vo.CardInfo;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Hand {
 
     private final DrawStrategy drawStrategy;
     private final List<Card> cards;
 
-    public Hand(DrawStrategy drawStrategy, List<Card> cards) {
+    Hand(DrawStrategy drawStrategy, List<Card> cards) {
         this.drawStrategy = drawStrategy;
         this.cards = new ArrayList<>(cards);
     }
 
-    void drawCard() {
-        cards.add(createCard());
+    static Hand based(DrawStrategy drawStrategy) {
+        return new Hand(drawStrategy, new ArrayList<>());
     }
 
-    List<String> cardInfos() {
-        return cards.stream().map(Card::info).collect(Collectors.toList());
+    void drawCard() {
+        cards.add(drawStrategy.draw());
+    }
+
+    List<CardInfo> cardInfos() {
+        return cards.stream()
+                .map(Card::info)
+                .toList();
     }
 
     List<Card> cards() {
@@ -30,34 +37,32 @@ public class Hand {
     boolean isBusted() {
         int score = rawScoreSum();
         if (aceCount() > 0) {
-            score -= aceCount() * Constants.ACE_WEIGHT;
+            score -= aceCount() * BlackJackRule.ACE_WEIGHT.value();
         }
-        return score > Constants.BUST_NUMBER;
-    }
-
-    int scoreSum() {
-        int total = rawScoreSum();
-        if (isOvercome()) {
-            total -= aceCount() * Constants.ACE_WEIGHT;
-        }
-        return total;
+        return score > BlackJackRule.BUST_NUMBER.value();
     }
 
     private int rawScoreSum() {
-        return cards.stream().mapToInt(Card::score).sum();
+        return cards.stream()
+                .mapToInt(Card::score)
+                .sum();
     }
 
     private int aceCount() {
         return (int) cards.stream()
-                .filter(c -> c.rank() == CardRank.ACE)
+                .filter(Card::isAce)
                 .count();
     }
 
-    private Card createCard() {
-        return drawStrategy.draw();
+    int scoreSum() {
+        int total = rawScoreSum();
+        if (isExceededBustNumber()) {
+            total -= aceCount() * BlackJackRule.ACE_WEIGHT.value();
+        }
+        return total;
     }
 
-    private boolean isOvercome() {
-        return rawScoreSum() > Constants.BUST_NUMBER;
+    private boolean isExceededBustNumber() {
+        return rawScoreSum() > BlackJackRule.BUST_NUMBER.value();
     }
 }
